# finch-mcp

./: .eslintrc.js  .gitignore  CHANGELOG.md  CLAUDE-INTEGRATION-VERIFIED.md  Cargo.toml  LICENSE  MCP_INSPECTOR_VALIDATION_SUMMARY.md  NPX-CONTAINER-SUCCESS.md  README.md  check-server-output.sh  claude-container-config.json  claude-direct-filesystem-config.json  claude-filesystem-config.json  claude-filesystem-finch-config.json  claude-finch-time-config.json  claude-stdio-config.json  claude-time-config.json  demo-usage.md  finch-mcp-wrapper.sh  install.sh  jest.config.js  package-lock.json  package.json  test-claude-integration-with-volume.sh  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-reference.md  architecture.md  auto-containerization.md  commands.md  containerization.md  contributing.md  development.md  finch-config.md  finch-mcp-comprehensive-guide.md  getting-started.md  manual_verification.md  mcp-inspector-integration.md  publishing.md  security.md  troubleshooting.md
examples/: claude-time-config.json  finch-mcp-typescript.yaml  run-time-server.sh  test-time-server.js
scripts/: test-npm-validation.sh  validate-mcp-inspector.sh  validate-mcp-project.sh
src/: cli.rs  cli.ts  index.ts  lib.rs  main.rs  output.rs  run.rs
src/cache/: content_hasher.rs  mod.rs
src/core/: auto-containerize.rs  auto_containerize.rs  create.ts  dev.ts  finch_config.rs  git_containerize.rs  publish.ts  run.ts
src/finch/: client.rs  finch-client.ts
src/logging/: mod.rs
src/mcp/: async_proxy.rs  buffer.rs  mod.rs  proxy.rs
src/templates/: Dockerfile.dev.template  Dockerfile.npm.template  Dockerfile.uv.template  dockerfile.rs
src/utils/: build_deps.rs  command-detector.rs  command_detector.rs  command_parser.rs  git_repository.rs  mcp-detector.ts  package-manager.ts  progress.rs  project_detector.rs  template-processor.ts
test-files/: config.json
test-files/subdir/: nested.txt
test-mcp-filesystem/: package.json
test-mcp-stdio-server/: package.json
test-mcp-time/: README.md  run-with-finch-mcp.sh
tests/: container_operations_tests.rs  e2e_integration_tests.rs  filesystem_operations_tests.rs  integration_test.rs  mcp_proxy_tests.rs  mcp_server_tests.rs
tests/configs/: claude-config-filesystem.json  claude-config-test.json  claude-filesystem-test.json
tests/finch/: finch-client.test.ts
tests/fixtures/: test-mcp-stdio.py
tests/scripts/: test-claude-filesystem.sh  test-claude-integration-complete.sh  test-claude-integration-with-env.sh  test-claude-integration.sh  test-mcp-basic.sh
tests/utils/: mcp-detector.test.ts  package-manager.test.ts
(+14 files in other folders)
